bugfix: slider nav alignment, missing image

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -412,7 +412,7 @@ a {
   padding: 0;
   cursor: pointer;
   position: absolute;
-  top: 9px; }
+  top: 10px; }
   .slider-nav__button .i {
     font-size: 40px; }
   .slider-nav__button:focus {
